# live

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRACT.md  LICENSE  Makefile  README.md  TODO.md
assets/references/: README.md
brain/: .dockerignore  Dockerfile  README.md  pyproject.toml
brain/src/live_brain/: __init__.py  config.py  config.yaml  main.py
brain/src/live_brain/conductor/: __init__.py
brain/src/live_brain/gate/: __init__.py
brain/src/live_brain/orchestrator/: __init__.py
brain/src/live_brain/tools/: __init__.py
brain/tests/: test_health.py  test_ws.py
deploy/: docker-compose.override.example.yml  docker-compose.yml
docs/: ARCHITECTURE.md  LICENSING.md  PRESENCE.md  SCENE_IR.md  VISION.md
schemas/: README.md
web/: .dockerignore  Dockerfile  README.md  index.html  package.json  tsconfig.build.json  vite.config.ts
web/docker/: default.conf
web/src/: config.ts  main.ts  styles.css
web/src/ws/: client.ts
